--- a/src/sass/parts/_header.sass
+++ b/src/sass/parts/_header.sass
@@ -50,7 +50,7 @@ nav ul.navigation
     /* Label */
     li a .label-text
         height: 20px
-        font-family: 'Raleway'
+        font-family: Raleway
         font-style: normal
         font-weight: 400
         font-size: 16px
