--- a/src/sass/templates/_productpage.sass
+++ b/src/sass/templates/_productpage.sass
@@ -34,10 +34,11 @@
     //row-gap: 10px
     // top: 0px
 
-h1.productBrand
+.productBrand
     width: 292px
     height: 27px
     margin: 0
+    margin-bottom: 0 !important
     font-family: Raleway
     font-style: normal
     font-weight: 600
@@ -61,6 +62,19 @@ h1.productBrand
     font-size: 30px
     line-height: 27px
     /* identical to box height, or 90% */
+
+    display: flex
+    align-items: center
+
+    color: #1D1F22
+
+.productPrice
+    font-family: 'Raleway'
+    font-style: normal
+    font-weight: 700
+    font-size: 24px
+    line-height: 18px
+    /* or 75% */
 
     display: flex
     align-items: center
