--- a/src/sass/parts/_header.sass
+++ b/src/sass/parts/_header.sass
@@ -102,3 +102,32 @@ nav ul.actions
         order: 0
         flex-grow: 0
         padding: 0px 10px
+
+/* Currency Selector */
+.currencySelector button
+    border: none
+    background: none
+
+.currencyDropDown
+    position: absolute
+    padding: 0
+    width: 114px
+    background: #FFFFFF
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px
+    z-index: 300
+
+    li.menu-item
+        width: 114px
+        height: 45px
+        position: relative
+        left: 5%
+        font-family: 'Raleway'
+        font-style: normal
+        font-weight: 500
+        font-size: 18px
+        line-height: 160%
+        /* identical to box height, or 29px */
+
+        text-align: right
+
+        color: #1D1F22
