--- a/src/sass/templates/_productpage.sass
+++ b/src/sass/templates/_productpage.sass
@@ -18,7 +18,6 @@
     left: 0
 
 .productGalleryImg
-
     width: 79px
     height: 80px
 
@@ -31,71 +30,73 @@
     grid-template-columns: auto
     grid-auto-rows: min-content
     position: absolute
-    //row-gap: 10px
-    // top: 0px
 
-.productBrand
-    width: 292px
-    height: 27px
-    margin: 0
-    margin-bottom: 0 !important
-    font-family: Raleway
-    font-style: normal
-    font-weight: 600
-    font-size: 30px
-    line-height: 27px
-    /* identical to box height, or 90% */
+form.productDetailsForm
+    margin-top: 43px
+    margin-bottom: 40px
 
-    display: flex
-    align-items: center
+    label
+        display: inline-block
+        margin-bottom: 24px
 
-    color: #1D1F22
+    .productBrand
+        width: 292px
+        height: 27px
+        margin: 0
+        margin-bottom: 0 !important
+        font-family: Raleway
+        font-style: normal
+        font-weight: 600
+        font-size: 30px
+        line-height: 27px
+        display: flex
+        align-items: center
+        color: #1D1F22
 
-.productName
-    width: 292px
-    height: 27px
-    margin: 0
-    padding-top: 16px
-    font-family: Raleway
-    font-style: normal
-    font-weight: 400
-    font-size: 30px
-    line-height: 27px
-    /* identical to box height, or 90% */
+    .productName
+        width: 292px
+        height: 27px
+        margin: 0
+        padding-top: 16px
+        font-family: Raleway
+        font-style: normal
+        font-weight: 400
+        font-size: 30px
+        line-height: 27px
+        display: flex
+        align-items: center
 
-    display: flex
-    align-items: center
+        color: #1D1F22
 
-    color: #1D1F22
+    .productPrice
+        font-family: 'Raleway'
+        font-style: normal
+        font-weight: 700
+        font-size: 24px
+        line-height: 18px
+        display: flex
+        align-items: center
+        color: #1D1F22
+        display: grid
 
-.productPrice
-    font-family: 'Raleway'
-    font-style: normal
-    font-weight: 700
-    font-size: 24px
-    line-height: 18px
-    /* or 75% */
+        .price
+            width: 86px
+            height: 46px
+            padding-top: 10px
+            display: flex
+            align-items: center
+            text-align: center
 
-    display: flex
-    align-items: center
-
-    color: #1D1F22
+    .productAttributes
+        padding: 40px 0 20px 0
 
 /* Description */
 .productDescription
-    // position: absolute
     width: 292px
     height: 103px
-    // right: 0px
-    // top: 350px
-
     font-family: 'Roboto'
     font-style: normal
     font-weight: 400
     font-size: 16px
     line-height: 159.96%
-    /* or 26px */
-
-    /* --c-text */
-
     color: #1D1F22
