--- a/src/sass/templates/_productslist.sass
+++ b/src/sass/templates/_productslist.sass
@@ -87,7 +87,11 @@ h1.productCategoryName
         align-self: stretch
         flex-grow: 0
     /* Price */
-    p.productPrice
+
+    label.productPrice span
+        display: none
+
+    .price
         /* Auto layout */
 
         display: flex
