--- a/src/sass/parts/_header.sass
+++ b/src/sass/parts/_header.sass
@@ -156,3 +156,25 @@ nav ul.actions
 
         &:focus
             background-color: grey
+
+/* Cart */
+.CartNumberItems
+    position: absolute
+    left: 92.5
+    right: 6.11%
+    top: 5%
+    bottom: 43.75%
+    font-family: 'Roboto'
+    font-style: normal
+    font-weight: 700
+    font-size: 14px
+    line-height: 16px
+    display: inline-grid
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+    color: #FFFFFF
+    width: 20px
+    height: 20px
+    background: #1D1F22
+    border-radius: 60px
