--- a/src/sass/templates/_cart.sass
+++ b/src/sass/templates/_cart.sass
@@ -85,3 +85,100 @@
             display: none
         .productDescription
             display: none
+
+    .cartOrderArea
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+        padding: 0px
+        gap: 16px
+
+        position: relative
+        width: 279px
+        height: 159px
+        left: 100px
+
+        .cartSummary
+            display: flex
+            flex-direction: column
+            align-items: flex-start
+            padding: 0px
+            gap: 8px
+
+            width: 198px
+            height: 100px
+
+            flex: none
+            order: 0
+            flex-grow: 0
+
+            .cartSummaryItem
+                font-family: 'Raleway'
+                font-style: normal
+                font-weight: 400
+                font-size: 24px
+                line-height: 28px
+                color: #1D1F22
+                display: flex
+                flex-direction: row
+                align-items: flex-start
+                padding: 0px
+                gap: 44px
+                width: 198px
+                height: 28px
+                flex: none
+                flex-grow: 0
+
+            .cartSummaryItemName
+
+                width: 100px
+                height: 28px
+                font-weight: 500
+                text-align: left
+                flex: none
+                order: 0
+                flex-grow: 0
+            .cartSummaryValue
+                width: 94px
+                height: 24px
+                font-family: 'Raleway'
+                font-style: normal
+                font-weight: 700
+                font-size: 24px
+                line-height: 24px
+                display: flex
+                align-items: center
+                text-align: right
+                color: #1D1F22
+                flex: none
+                order: 1
+                flex-grow: 0
+        .placeOrderButton
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            padding: 16px 32px
+
+            width: 279px
+            height: 43px
+
+            background: #5ECE7B
+            border: none
+
+            flex: none
+            order: 1
+            flex-grow: 0
+
+            font-family: 'Raleway'
+            font-style: normal
+            font-weight: 600
+            font-size: 14px
+            line-height: 120%
+
+            display: flex
+            align-items: center
+            text-align: center
+            text-transform: uppercase
+
+            color: #FFFFFF
