--- a/src/sass/templates/_cart.sass
+++ b/src/sass/templates/_cart.sass
@@ -19,10 +19,8 @@
     left: 100px
     top: 330px
     width: 100%
-    display: grid
-    grid-template: 430px / auto
-    grid-gap: 10px
-    padding: 10px
+    display: flex
+    flex-direction: column
 
     /* Cart Garelly */
     .productGalleryCart
@@ -62,8 +60,9 @@
 
     .productDetails
         position: absolute
-        left: 100px
+        left: 0
         height: auto
+        padding: 10px 0 10px 0
         .productDetailsForm
             display: flex
             flex-flow: column
@@ -90,13 +89,15 @@
         display: flex
         flex-direction: column
         align-items: flex-start
-        padding: 0px
+        padding: 30px 0 0 0
         gap: 16px
 
         position: relative
-        width: 279px
-        height: 159px
         left: 100px
+        // width: 279px
+        height: 159px
+
+        border-top: 1px solid #E5E5E5
 
         .cartSummary
             display: flex
