--- a/src/sass/templates/_cart.sass
+++ b/src/sass/templates/_cart.sass
@@ -18,9 +18,14 @@
     position: absolute
     left: 100px
     top: 330px
-    width: 100%
+    width: 70%
+    // height: 100%
+    // min-height: 0
     display: flex
     flex-direction: column
+
+    nav
+        height: 450px
 
     /* Cart Garelly */
     .productGalleryCart
@@ -62,6 +67,7 @@
         position: absolute
         left: 0
         height: auto
+        width: 70%
         padding: 10px 0 10px 0
         .productDetailsForm
             display: flex
@@ -84,6 +90,51 @@
             display: none
         .productDescription
             display: none
+        .adjustQuntity
+            display: block
+            grid-column: 2 / 2
+            position: relative
+            right: 0
+
+            .itemQuntity
+                position: absolute
+                right: 20px
+                top: 50%
+                font-family: 'Raleway'
+                font-style: normal
+                font-weight: 500
+                font-size: 24px
+                line-height: 160%
+                display: flex
+                align-items: center
+                text-align: center
+                color: #1D1F22
+
+            .buttonIncreaseQuantity
+                right: 0%
+                top: 0%
+
+                &::after
+                    content: "\208A"
+                    visibility: visible
+                    display: block
+                    position: absolute
+                    left: 12px
+                    font-size: 55px
+                    top: -20px
+
+            .buttonDecreaseQuantity
+                right: 0%
+                bottom: 0%
+
+                &::after
+                    content: "\208B"
+                    visibility: visible
+                    display: block
+                    position: absolute
+                    left: 12px
+                    font-size: 55px
+                    top: -20px
 
     .cartOrderArea
         display: flex
