--- a/src/sass/templates/_attributesselector.sass
+++ b/src/sass/templates/_attributesselector.sass
@@ -52,6 +52,11 @@
     letter-spacing: 0.05em
     color: #1D1F22
 
+.overlay__container .labelSize .checkmark
+    width: auto
+    min-width: 24px
+    height: 24px
+
 /* On mouse-over, add a grey background color */
 .labelSize:hover input ~ .checkmark
     background-color: #ccc
@@ -85,6 +90,10 @@
     height: 32px
     display: grid
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px
+
+.overlay__container .labelColor .checkmark
+    width: 16px
+    height: 16px
 
 /* When the checkbox is checked, add a green border */
 .labelColor input:checked ~ .checkmark
