--- a/src/sass/templates/_cart.sass
+++ b/src/sass/templates/_cart.sass
@@ -14,37 +14,39 @@
     text-transform: uppercase
     color: #1D1F22
 
+.cartInfo
+    display: none
+
 .cart-grid-container
     position: absolute
     left: 100px
     top: 330px
-    width: 70%
+    width: 100%
     // height: 100%
     // min-height: 0
     display: flex
     flex-direction: column
 
-    nav
-        height: 450px
-
     /* Cart Garelly */
     .productGalleryCart
-        position: relative
+        position: absolute
+        top: 0
         left: 70%
-        width: 200px
-        height: 330px
+        width: 30%
+        height: auto
+        min-height: 100% !important
         background-color: white
 
         .productGalleryMainImg
             width: auto
-            height: 280px
+            height: 250px
             left: 0
             padding-top: 10px
 
         .nextImg
-            position: relative
+            position: absolute
             bottom: 10%
-            left: 70%
+            left: 20%
             background-color: rgba(0, 0, 0, 0.73)
             width: 24px
             height: 24px
@@ -53,9 +55,9 @@
             border: none
 
         .prevImg
-            position: relative
+            position: absolute
             bottom: 10%
-            left: 65%
+            left: 10%
             background-color: rgba(0, 0, 0, 0.73)
             width: 24px
             height: 24px
@@ -64,10 +66,11 @@
             border: none
 
     .productDetails
-        position: absolute
-        left: 0
+        position: relative
         height: auto
-        width: 70%
+        min-height: 100% !important
+        left: 0
+        width: 65%
         padding: 10px 0 10px 0
         .productDetailsForm
             display: flex
@@ -78,9 +81,13 @@
                 margin-bottom: 10px
             .productAttributes
                 order: 2
-                padding: 0 0 20px 0
+                padding: 0
                 .attributesValues
-                    grid-template-columns: repeat(10, 1fr)
+                    // grid-template-columns: repeat(10, 1fr)
+                    display: flex
+                    flex-direction: row
+                    flex-wrap: wrap
+                    gap: 2px
             .productPrice
                 order: 1
                 .labelName
@@ -90,16 +97,18 @@
             display: none
         .productDescription
             display: none
-        .adjustQuntity
+        .adjustQuantity
+            margin-top: 10px
+            margin-bottom: 10px
             display: block
             grid-column: 2 / 2
             position: relative
             right: 0
 
-            .itemQuntity
+            .itemQuantity
                 position: absolute
                 right: 20px
-                top: 50%
+                top: 45%
                 font-family: 'Raleway'
                 font-style: normal
                 font-weight: 500
@@ -125,7 +134,7 @@
 
             .buttonDecreaseQuantity
                 right: 0%
-                bottom: 0%
+                bottom: 5%
 
                 &::after
                     content: "\208B"
@@ -234,3 +243,5 @@
             text-transform: uppercase
 
             color: #FFFFFF
+        .viewBagButton
+            display: none
