--- a/src/sass/templates/_productpage.sass
+++ b/src/sass/templates/_productpage.sass
@@ -36,7 +36,7 @@ form.productDetailsForm
     margin-bottom: 40px
 
     label
-        display: inline-block
+        display: block
         margin-bottom: 24px
 
     .productBrand
